--- a/xss/production/test/3js_class_test.html
+++ b/xss/production/test/3js_class_test.html
@@ -2,6 +2,17 @@
 <html>
 <head>
 <title></title>
+<style type="text/css">
+	body{
+	}
+</style>
+</head>
+<body>
+<script type="text/javascript" src="../js/three/Detector.js"></script>
+<script type="text/javascript" src="../js/three/Three.js"></script>
+<script type="text/javascript" src="../js/three/Stats.js"></script>
+<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
@@ -9,133 +20,99 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
-<script type="text/javascript">	
-var drawingCanvas;		
-var g_ui;
+<script type="text/javascript">		
+	var renderer = new THREE.CanvasRenderer();	
+var ui;
+var active_camera;
 var g_elapsed = -1;
-var g_delta = 0.0;
-var g_canvas;
-var g_ui_root;
+var g_delta = 0.0;	
+var drawingCanvas = renderer.domElement;
 var application = {};
-var Sound = new ms.ui.Sound();
-		if(drawingCanvas){
-			var client =
-			{
-				width: 600,
-				height: 400,
-				canvas: drawingCanvas
-			};
-			var ui = new ms.ui.Manager(client, streamer);
-			var g_ui = ui;
-			var g_ui_root = ui.root;
-		}
 		var streamer = new ms.streamer.Streamer();
+	// --------RESOURCES---------
         var def_package_items = [];
+                def_package_items.push(
+            {
+		id:"__image1",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/test1.png"
+});
         var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
 		g_startup_package.load();	
-function start(resolution)  
-{  
-	function updater()  
-	{  
-		var now   = new Date().getTime();
-        if (g_elapsed < 0)
-            g_delta = 0; //first update
-        else
-		    g_delta  = now - g_elapsed;  
-        g_elapsed = now; 
-		var context = g_canvas.getContext('2d');
-		g_ui.update(g_delta, context);
-        window.setTimeout(updater, resolution);  
-	}
-	window.setTimeout(updater, resolution);  
-}  
-            my_image = Class.create(ms.ui.Image,
+    // --------RESOURCES---------
+soundRenderer = new THREE.SoundRenderer();		
+document.body.appendChild( soundRenderer.domElement );
+renderer.setSize( 600,400 );
+function render() {
+var now   = new Date().getTime();
+if (g_elapsed < 0)
+    g_delta = 0; //first update
+else
+g_delta  = now - g_elapsed;  
+g_elapsed = now; 
+		set_active_camera(camera_1);
+}
+        function create_my_plane(
+     ) {  
+		var my_plane = new THREE.Object3D();
+        my_plane.image = null;
+        my_plane.image_set = function (value)
         {
-    initialize: function($super
-                , src
-                )
-    {
-        $super(
-        src        );
-                this.x_pos = null;
-                this.y_pos = null;
-                this.img2 = null;
-	this.traslate = function() 
+            my_plane.image = value;
+            real_plane.materials[ 0 ] = new THREE.MeshBasicMaterial({
+						map:THREE.ImageUtils.loadTexture(streamer.get_resource(value).asset),
+						});
+        };
+            var real_plane;
+	    var real_plane_plane = 
+new THREE.Plane(
+128,164);
+	    var real_plane = new THREE.Mesh(real_plane_plane, null);
+	    scene.addObject(real_plane);
+            my_plane.addChild(real_plane);
+        return my_plane;
+        }
+var scene = 
+new THREE.Scene(
+);
+var camera_1 = 
+new THREE.Camera(
+45,1.5,1,10000);
+                camera_1.position.x = 500;
+                camera_1.position.y = 500;
+                camera_1.position.z = 1000;
+	document.addEventListener( 'click', click_application, false );
+	function click_application (event)
 	{
-		this.x += 5;
-this.y += 5;
-this.set_rotation(this.rotation + 0.200000003);
+	var x = event.clientX;
+	var y = event.clientY;
+		var plane_1 = 
+create_THREE.Object3D(
+);
+;
+plane_1.image_set("images/test1.png");
+scene.addObject(plane_1);
 	};
-	this.click = function()
-	{    
-		this.x_pos = this.x;
-this.y_pos = this.y;
-this.traslate();
-this.img2 = new my_image("images/img1.png");
-this.img2.rect(this.x_pos + 50, this.y_pos - 50, 50, 50);
-	};
-            if (this.init)
-                this.init();
-            },
-});
-window.onload = function() 
+if(ui)
 {
-	drawingCanvas = document.getElementById("myCanvas");
-    g_canvas = drawingCanvas;
-	if (drawingCanvas && drawingCanvas.getContext)
-	{
-		var client =
-		{
-			width: 600,
-			height: 400,
-			canvas: drawingCanvas
-		};
-		var ui = new ms.ui.Manager(client, streamer);
-		g_ui = ui;
-        g_ui_root = ui.root;
-     	ui.load_resources(function()
-		{
-	drawingCanvas.onmousemove = function(ev)
-	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
-	};
-	drawingCanvas.onmousedown = function(ev)
-	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
-	};
-	drawingCanvas.onmouseup = function(ev)
-	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
-			document.onkeydown = function(ev)
-			{
-				ui.keydown(ev.keyCode);                  
-			};
-			document.onkeyup = function(ev)
-			{
-				ui.keyup(ev.keyCode);                  
-			};
-			document.onkeypress = function(ev)
-			{
-				ui.keypress(ev.keyCode);                  
-			};
-            if (application.init)
-            {
-                application.init();
-            }
-            start();
-			ui.draw(drawingCanvas.getContext('2d'));
-		});
-	}
+	ui.load_resources(function(){		
+		g_ui.fill_background = false;
+	});
+}
+if (application.init)
+{
+	application.init();
+}
+document.body.appendChild( renderer.domElement );
+animate();
+function animate() {
+	if(ui)
+		drawingCanvas.getContext('2d').clearRect(0,0,600,400);
+	requestAnimationFrame( animate );
+	render();
+	if(ui)
+		ui.draw(drawingCanvas.getContext('2d'));
 }
 </script>
-</head>
-<body>
-	<canvas id="myCanvas" width="600" height="400">
-		<p>Your browser doesn't support canvas.</p>
-	</canvas>
-	<audio id="sounds" preload> 
-	Your browser does not support the audio element.
-	</audio>
 </body>
 </html>
