--- a/xss/tests/blend_xs_template.html
+++ b/xss/tests/blend_xs_template.html
@@ -7,7 +7,8 @@
 <link rel="stylesheet" type="text/css" href="blend_xs.css" media="screen" />
 </head>
 <body>
-
+<script id="initial_script" type="text/javascript">
+</script>
 <div id="wrap">
 
 <div id="header">
